added new categories

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -163,7 +163,22 @@
   "dairy": "Dairy",
   "masala": "Masala",
   "dryFruits": "Dry Fruits",
-  "pulses": "pulses",
+  "uncultivated": "Uncultivated",
+  "pulses": "Pulses",
+  "aruvedic": "Aruvedic",
+  "ghee": "Ghee",
+  "mukhvas": "Mukhvas",
+  "vegetable": "Vegetable",
+  "fruits": "Fruits",
+  "flour": "Flour",
+  "jaggery": "Jaggery",
+  "others": "Others",
+  "millets": "Millets",
+  "grains": "Grains",
+  "juice": "Juice",
+  "healthy diets": "Healthy Diets",
+  "sugar": "Sugar",
+  "honey": "Honey",
   "noProductsFound": "No products found matching your criteria.",
   "failedToDeleteProduct": "Failed to delete product. Please try again.",
   "deleteProductConfirm": "Are you sure you want to delete \"{{name}}\"?",
