--- a/frontend/src/locales/gu.json
+++ b/frontend/src/locales/gu.json
@@ -283,5 +283,23 @@
   "totalProductsAvailable": "કુલ: {{count}} ઉપલબ્ધ ઉત્પાદનો",
   "selected": "પસંદ કરેલ",
   "selectProduct": "ઉત્પાદન પસંદ કરો",
-  "noProductsFound": "તમારા માપદંડ સાથે કોઈ ઉત્પાદન મળ્યું નથી."
+  "noProductsFound": "તમારા માપદંડ સાથે કોઈ ઉત્પાદન મળ્યું નથી.",
+  "Dry Fruits": "શુકા ફળો",
+  "Masala": "મસાલા",
+  "Uncultivated": "અખેત",
+  "Pulses": "દાળ",
+  "Aruvedic": "આયુર્વેદિક",
+  "Ghee": "ઘી",
+  "Mukhvas": "મુખવાસ",
+  "Vegetable": "શાકભાજી",
+  "Fruits": "ફળો",
+  "Flour": "અટા",
+  "Jaggery": "ગોળ",
+  "Others": "અન્ય",
+  "Millets": "મિલેટ્સ",
+  "Grains": "અનાજ",
+  "Juice": "રસ",
+  "Healthy Diets": "હેલ્ધી ડાયેટ્સ",
+  "Sugar": "ખાંડ",
+  "Honey": "મધ"
 }
