--- a/frontend/src/locales/gu.json
+++ b/frontend/src/locales/gu.json
@@ -301,5 +301,7 @@
   "Juice": "રસ",
   "Healthy Diets": "હેલ્ધી ડાયેટ્સ",
   "Sugar": "ખાંડ",
-  "Honey": "મધ"
+  "Honey": "મધ",
+  "Dairy Products": "ડેરી ઉત્પાદનો",
+  "Oils": "તેલ"
 }
