--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -1,4 +1,7 @@
 {
+  "signingIn": "Signing In...",
+  "dontHaveAccount": "Don't have an account?",
+  "enterPassword": "Enter your password",
   "welcome": "Welcome",
   "logout": "Logout",
   "dashboard": "Dashboard",
@@ -7,7 +10,7 @@
   "paidBills": "Paid Bills",
   "revenue": "Revenue",
   "adminDashboard": "Admin Dashboard",
-  "welcomeBack": "Welcome Back",
+  "welcomeBack": "Welcome to Srishtikhedu Tahat",
   "signInDesc": "Sign in to your account to access the vendor management system",
   "totalVendors": "Total Vendors",
   "activeVendors": "Active Vendors",
@@ -113,9 +116,7 @@
   "powerfulFeatures": "Powerful Features",
   "featuresDesc": "Everything you need to manage your vendor ecosystem efficiently",
   "productManagement": "Product Management",
-  "productManagementDesc": "Comprehensive CRUD operations for products with categorization and inventory tracking.",
   "userManagement": "User Management",
-  "userManagementDesc": "Role-based access control with Admins, Vendors, and User roles.",
   "invoiceGeneration": "Invoice Generation",
   "invoiceGenerationDesc": "Automated invoice creation with QR code integration for seamless payments.",
   "analyticsReports": "Analytics & Reports",
@@ -136,7 +137,6 @@
   "enterName": "Enter your name",
   "enterEmail": "Enter your email",
   "phone": "Phone",
-  "enterPhoneNumber": "Enter your phone number",
   "password": "Password",
   "createPassword": "Create a password",
   "togglePassword": "Toggle password visibility",
@@ -159,7 +159,6 @@
   "searchProducts": "Search products...",
   "allCategories": "All Categories",
   "vegetables": "Vegetables",
-  "fruits": "Fruits",
   "dairy": "Dairy",
   "masala": "Masala",
   "dryFruits": "Dry Fruits",
@@ -179,7 +178,6 @@
   "healthy diets": "Healthy Diets",
   "sugar": "Sugar",
   "honey": "Honey",
-  "noProductsFound": "No products found matching your criteria.",
   "failedToDeleteProduct": "Failed to delete product. Please try again.",
   "deleteProductConfirm": "Are you sure you want to delete \"{{name}}\"?",
   "errorFetchingVendors": "Error fetching vendors.",
