--- a/frontend/src/locales/gu.json
+++ b/frontend/src/locales/gu.json
@@ -25,7 +25,7 @@
   "fromUrl": "URL માંથી",
   "upload": "અપલોડ કરો",
   "adminDashboard": "એડમિન ડેશબોર્ડ",
-  "welcomeBack": "પાછા આવો",
+  "welcomeBack": "સૃષ્ટિખેડુતહાટમાં આપનું સ્વાગત છે",
   "signInDesc": "વિક્રેતા મેનેજમેન્ટ સિસ્ટમ ઍક્સેસ કરવા માટે તમારા એકાઉન્ટમાં સાઇન ઇન કરો",
   "totalVendors": "કુલ વેન્ડર્સ",
   "activeVendors": "સક્રિય વેન્ડર્સ",
